tests/positive/test_sanction_func_oop_valid_genesis_scope.veldanava
#Pre_Descent Primordial_Regalia
Primordial_Regalia;

genesis func main():
    genesis if true:
        Sanction:
            plus;
            print();
            MyClass();
        ;
    ;
;
