tests/negative/dup_sanction.veldanava
#Pre_Descent Primordial_Regalia
Primordial_Regalia;

Sanction:
    plus;
    plus;
;
